# aws-cfn-resource-picker

./: Cargo.toml  README.md
src/: cli.rs  engine.rs  main.rs
